# GCXL_SmartCar

./: .gitignore  CMakeLists.txt  temp
Apps/: CMakeLists.txt
Apps/CarMove/: carmove.c  carmove.h
Apps/Start/: main.c  mutual.c
CarVision/: config.ini  find_circle.py  find_material.py  hsv_image.py  hsv_video.py  send.py  server.py
CarVision/CarVisionEdge/: config.ini  detect_color.py  find_circle.py  find_material.py  send.py  server.py
Components/: CMakeLists.txt
Components/Chassis/: chassis.c  chassis.h  pid.c  pid.h
Components/HWT101/: hwt101.c  hwt101.h  hwt101_def.c
Components/Motor/: motor.c  motor.h  motor_addup.c  motor_def.c  motor_speed.c
Components/fSetting/: fsetting.c
Config/: cortex_it.c  type_def.h
Drivers/: CMakeLists.txt
Libraries/Peripherals/: boart_led.c  usart.c
Libraries/Peripherals/Include/: board_led.h  usart.h
Libraries/System/: syshook.c  sysmem.c
Start/: CMakeLists.txt  main.c  mutual.c  mutual_def.c
Start/Include/: main.h  mutual.h
